# trovochat

./: Cargo.toml  README.md  appveyor.yml
.github/workflows/: dev.yaml  master.yml
crates/ratelimit/: Cargo.toml  LICENSE
crates/tee/: Cargo.toml
examples/: async_io_demo.rs  async_std_demo.rs  client.rs  config.rs  demo.rs  filter.rs  handler.rs  message_parse.rs  parse.rs  retry.rs  select.rs  short.rs  simple.rs  simple_bot.rs  smol_demo.rs  threads.rs  tokio_demo.rs  wait_to_join.rs
examples/include/: mod.rs
ratelimit/: Cargo.toml
simple_event_map/: Cargo.toml
src/: connect.rs  connector.rs  conversion.rs  decoder.rs  encoder.rs  events.rs  irc.rs  lib.rs  messages.rs  parse.rs  rate_limit.rs  ratelimit.rs  register.rs  runner.rs  sync.rs  tags.rs  userconfig.rs  util.rs
src/client/: control.rs  dispatcher.rs  event.rs  mod.rs  runner.rs
src/commands/: color.rs  register.rs
src/connect/: mod.rs
src/connector/: async_io.rs  async_std.rs  smol.rs  tokio.rs
src/connector/async_io/: non_tls.rs  tls.rs
src/connector/async_std/: non_tls.rs  tls.rs
src/connector/smol/: non_tls.rs  tls.rs
src/connector/tokio/: native_tls.rs  non_tls.rs  openssl.rs  rustls.rs
src/decode/: mod.rs  parser.rs  prefix.rs  tests.rs
src/decoder/: mod.rs
src/encode/: color.rs  mod.rs
src/encoder/: mod.rs
src/irc/: message.rs  prefix.rs  tags.rs  tcpconn.rs  userconfig.rs
src/maybe_owned/: into_owned.rs
src/messages/: all_commands.rs  cap.rs  clear_chat.rs  clear_msg.rs  commands.rs  global_user_state.rs  host_target.rs  irc_ready.rs  join.rs  mod.rs  notice.rs  privmsg.rs  ready.rs  reconnect.rs  room_state.rs  tests.rs  user_notice.rs  user_state.rs  whisper.rs
src/messages/messages/: all_commands.rs  mode.rs  names.rs  notice.rs  privmsg.rs  ready.rs  reconnect.rs  user_notice.rs  whisper.rs
src/native_tls/: mod.rs
src/ng/irc/: message.rs
src/ng/messages/: cap.rs  clear_chat.rs  clear_msg.rs  global_user_state.rs  host_target.rs  irc_ready.rs  join.rs  notice.rs  privmsg.rs  ready.rs  reconnect.rs  room_state.rs  user_notice.rs  user_state.rs  whisper.rs
src/ratelimit/: mod.rs
src/runner/: async_runner.rs  capabilities.rs  channel.rs  control.rs  dispatcher.rs  error.rs  identity.rs  mod.rs  rate_limit.rs  runner.rs
src/rustls/: mod.rs
src/tee/: mod.rs
src/test/: tags_builder.rs
src/twitch/: adapter.rs  badge.rs  capability.rs  channel.rs  client.rs  color.rs  emotes.rs  error.rs  extension.rs  filter.rs  handler.rs  message.rs  mod.rs  tags.rs  userconfig.rs  writer.rs
src/twitch/commands/: globaluserstate.rs  mod.rs  notice.rs  privmsg.rs  reconnect.rs  tests.rs  usernotice.rs  userstate.rs
tee/: Cargo.toml
twitchchat/: Cargo.toml  README.md
twitchchat/examples/: async_std_demo.rs  smol_demo.rs  tokio_demo.rs
twitchchat/src/: irc.rs  lib.rs  messages.rs  rate_limit.rs  runner.rs  util.rs
twitchchat/src/commands/: register.rs
twitchchat/src/connector/: async_io.rs  async_std.rs  smol.rs  tokio.rs
twitchchat/src/irc/: tags.rs
twitchchat/src/messages/: all_commands.rs  cap.rs  clear_chat.rs  clear_msg.rs  global_user_state.rs  host_target.rs  irc_ready.rs  join.rs  notice.rs  privmsg.rs  ready.rs  reconnect.rs  room_state.rs  user_notice.rs  user_state.rs  whisper.rs
twitchchat/src/runner/: async_runner.rs  error.rs  rate_limit.rs
twitchchat/src/twitch/: adapter.rs  badge.rs  capability.rs  client.rs  color.rs  emotes.rs  extension.rs  mod.rs  userconfig.rs  writer.rs
twitchchat/src/twitch/commands/: usernotice.rs
twitchchat/t_examples/: retry.rs  wait_to_join.rs
