[package]
name          = "trovochat"
edition       = "2018"
version       = "0.8.4"
authors       = ["museun <museun@aleph0cap.com>"]
keywords      = ["trovo", "irc", "async", "asynchronous", "tokio"]
license       = "MIT OR Apache-2.0"
readme        = "README.md"
description   = "interface to the irc-side of trovo's chat system"
documentation = "https://docs.rs/trovochat/0.8.4/trovochat/"
repository    = "https://github.com/museun/trovochat"
categories    = ["asynchronous", "network-programming", "parser-implementations"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["async", "tls"]
async   = ["tokio", "futures"]
tls     = ["tokio-tls", "native-tls"]

[dependencies]
futures    = { version = "0.3.4", optional = true, default-features = false, features = ["alloc"] } # for AbortHandle
log        = { version = "0.4.8" }
native-tls = { version = "0.2.3", optional = true }
serde      = { version = "1.0.104", optional = true, features = ["derive"] }
tokio      = { version = "0.2.13", optional = true, features = ["dns", "io-util", "stream", "sync", "tcp", "time"] }
tokio-tls  = { version = "0.3.0", optional = true }

[dev-dependencies]
matches = "0.1.8"
tokio   = { version = "0.2.13", features = ["test-util", "macros"] }

[[example]]
name = "demo"
required-features = ["async"]

[[example]]
name = "short"
required-features = ["async"]

[[example]]
name = "wait_to_join"
required-features = ["async"]

[[example]]
name = "parse"


