[package]
name          = "trovochat"
edition       = "2018"
version       = "0.11.8"
authors       = ["museun <museun@aleph0cap.com>"]
keywords      = ["trovo", "irc", "async", "asynchronous", "tokio"]
license       = "MIT OR Apache-2.0"
readme        = "README.md"
description   = "interface to the irc-side of trovo's chat system"
documentation = "https://docs.rs/trovochat/latest/trovochat/"
repository    = "https://github.com/museun/trovochat"
categories    = ["asynchronous", "network-programming", "parser-implementations"]

[package.metadata.docs.rs]
features = [ "default" ]
rustdoc-args = ["--cfg", "docsrs"]

[features]

[dependencies]
# logging support
log = "0.4.11"

# event dispatching
simple_event_map = "0.1.0"

# serializion/deserializion support
serde = { version = "1.0.114", optional = true, features = ["derive"] }

# just the futures traits
futures-lite = "0.1.10"

# field pin projection
pin-project-lite = "0.1.7"

# internal stuff
# async-channel    = "1.4.0"
# async-mutex      = "1.1.5"
# event-listener   = "2.3.0"
# parking          = "1.0.6"

[dev-dependencies]
doc-comment = "0.3.3"
serde_json = "1.0.57"
async-executor = { version = "0.1.2", default-features = false }

# [[example]]
# name = "demo"
# required-features = ["async", "tokio_native_tls"]

# [[example]]
# name = "wait_to_join"
# required-features = ["async", "tokio_native_tls"]

# [[example]]
# name = "simple_bot"
# required-features = ["async", "tokio_native_tls"]

# [[example]]
# name = "retry"
# required-features = ["async", "tokio_native_tls"]

# [[example]]
# name = "parse"
